tests/rust_data/rocket/core/codegen/tests/ui-fail-nightly/route-type-errors.stderr
error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
 --> tests/ui-fail-nightly/route-type-errors.rs:6:12
  |
6 | fn f0(foo: Q) {}
  |            ^ the trait `FromParam<'_>` is not implemented for `Q`
  |
  = help: the following other types implement trait `FromParam<'a>`:
            bool
            isize
            i8
            i16
            i32
            i64
            i128
            usize
          and $N others

error[E0277]: the trait bound `Q: FromSegments<'_>` is not satisfied
 --> tests/ui-fail-nightly/route-type-errors.rs:9:12
  |
9 | fn f1(foo: Q) {}
  |            ^ the trait `FromSegments<'_>` is not implemented for `Q`
  |
  = help: the following other types implement trait `FromSegments<'r>`:
            <Segments<'r, rocket::http::uri::fmt::Path> as FromSegments<'r>>
            <PathBuf as FromSegments<'_>>
            <std::option::Option<T> as FromSegments<'r>>
            <Result<T, <T as FromSegments<'r>>::Error> as FromSegments<'r>>

error[E0277]: the trait bound `Q: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/route-type-errors.rs:12:12
   |
12 | fn f2(foo: Q) {}
   |            ^ the trait `FromFormField<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             bool
             isize
             i8
             i16
             i32
             i64
             i128
             usize
           and $N others
   = note: required for `Q` to implement `FromForm<'_>`

error[E0277]: the trait bound `Q: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/route-type-errors.rs:15:12
   |
15 | fn f3(foo: Q) {}
   |            ^ the trait `FromFormField<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             bool
             isize
             i8
             i16
             i32
             i64
             i128
             usize
           and $N others
   = note: required for `Q` to implement `FromForm<'_>`

error[E0277]: the trait bound `Q: FromData<'_>` is not satisfied
  --> tests/ui-fail-nightly/route-type-errors.rs:18:12
   |
18 | fn f4(foo: Q) {}
   |            ^ the trait `FromData<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromData<'r>`:
             rocket::Data<'r>
             Cow<'_, str>
             Capped<Cow<'_, str>>
             Capped<Vec<u8>>
             Capped<TempFile<'_>>
             Capped<std::string::String>
             Capped<&'r str>
             Capped<&'r RawStr>
           and $N others

error[E0277]: the trait bound `Q: FromRequest<'_>` is not satisfied
  --> tests/ui-fail-nightly/route-type-errors.rs:21:10
   |
21 | fn f5(a: Q, foo: Q) {}
   |          ^ the trait `FromRequest<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromRequest<'r>`:
             rocket::http::Method
             Outcome<T, (Status, <T as FromRequest<'r>>::Error), Status>
             Flash<&'r rocket::http::CookieJar<'r>>
             rocket::Shutdown
             IpAddr
             std::net::SocketAddr
             std::option::Option<T>
             Result<T, <T as FromRequest<'r>>::Error>
           and $N others

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> tests/ui-fail-nightly/route-type-errors.rs:21:18
   |
21 | fn f5(a: Q, foo: Q) {}
   |                  ^ the trait `FromParam<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromParam<'a>`:
             bool
             isize
             i8
             i16
             i32
             i64
             i128
             usize
           and $N others

error[E0277]: the trait bound `Q: FromRequest<'_>` is not satisfied
  --> tests/ui-fail-nightly/route-type-errors.rs:24:10
   |
24 | fn f6(a: Q, foo: Q, good: usize, bar: Q) {}
   |          ^ the trait `FromRequest<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromRequest<'r>`:
             rocket::http::Method
             Outcome<T, (Status, <T as FromRequest<'r>>::Error), Status>
             Flash<&'r rocket::http::CookieJar<'r>>
             rocket::Shutdown
             IpAddr
             std::net::SocketAddr
             std::option::Option<T>
             Result<T, <T as FromRequest<'r>>::Error>
           and $N others

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> tests/ui-fail-nightly/route-type-errors.rs:24:18
   |
24 | fn f6(a: Q, foo: Q, good: usize, bar: Q) {}
   |                  ^ the trait `FromParam<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromParam<'a>`:
             bool
             isize
             i8
             i16
             i32
             i64
             i128
             usize
           and $N others

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> tests/ui-fail-nightly/route-type-errors.rs:24:39
   |
24 | fn f6(a: Q, foo: Q, good: usize, bar: Q) {}
   |                                       ^ the trait `FromParam<'_>` is not implemented for `Q`
   |
   = help: the following other types implement trait `FromParam<'a>`:
             bool
             isize
             i8
             i16
             i32
             i64
             i128
             usize
           and $N others
